syntax = "proto3";

package os;

import "google/protobuf/timestamp.proto";
import "p8e/util.proto";

option java_package = "io.provenance.os.proto";
option java_outer_classname = "Objects";

service ObjectService {
    rpc Put(stream ChunkBidi) returns (ObjectResponse) {};

    rpc Get(Sha512Request) returns (stream ChunkBidi) {};

    rpc GetByUuid(UUID) returns (stream ChunkBidi) {};
}

message ChunkBidi {
    oneof impl {
        MultiStreamHeader multi_stream_header = 1;
        Chunk chunk = 2;
    }
}

message Sha512Request {
    bytes sha_512 = 1;
    bytes public_key = 2;
}

message ObjectResponse {
    Object object = 1;
    Item item = 2;
}

message Chunk {
    StreamHeader header = 1;
    oneof impl {
        bytes data = 2;
        bytes value = 3;
        ChunkEnd end = 4;
    }
}

message ChunkEnd {}

message MultiStreamHeader {
    int32 stream_count = 1;
    map<string, string> metadata = 2;
}

message StreamHeader {
    string name = 1;
    int64 content_length = 2;
}

message Item {
    string bucket = 1;
    string name = 2;
    int32 contentLength = 3;
    map<string, string> metadata = 4;
}

message Object {
    UUID uuid = 1;
    UUID object_uuid = 2;
    bytes unencrypted_sha_512 = 3;
    repeated Signature signatures = 4;
    string uri = 5;
    string bucket = 6;
    string name = 7;
    ObjectMetadata metadata = 8;
    google.protobuf.Timestamp effective_start_date = 9;
    google.protobuf.Timestamp effective_end_date = 10;
    google.protobuf.Timestamp created = 11;
    string created_by = 12;
    google.protobuf.Timestamp updated = 13;
    string updated_by = 14;
}

message ObjectMetadata {
    UUID uuid = 1;
    UUID document_uuid = 2;
    bytes sha_512 = 3;
    int32 length = 4;
    string connector_class = 5;
    google.protobuf.Timestamp created = 6;
    string created_by = 7;
    google.protobuf.Timestamp updated = 8;
    string updated_by = 9;
}

message Signature {
    bytes signature = 1;
    bytes public_key = 2;
}
